# word_translator

./: .gitignore  README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
backend/.zeabur/: context.json
backend/src/: main.py
backend/src/api/: dependencies.py
backend/src/api/v1/: router.py
backend/src/api/v1/endpoints/: health.py  translations.py
backend/src/core/: config.py  exceptions.py
backend/src/models/: translation.py
backend/src/services/: chunker.py  document_parser.py  translation_service.py  translation_store.py  translation_strategy.py  word_exporter.py
backend/tests/: conftest.py  test_api_translations.py  test_chunker.py  test_document_parser.py  test_language_detection.py  test_models.py  test_translation_service.py  test_translation_store.py  test_translation_strategy.py  test_word_exporter.py
docs/plans/: 2026-02-18-pdf-support-design.md  2026-02-18-word-translator-design.md  2026-02-18-word-translator-implementation.md  2026-02-18-workspace-redesign-design.md  2026-02-18-workspace-redesign.md  2026-02-20-bidirectional-translation-design.md
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/.zeabur/: context.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: FontSizeControl.tsx  HistoryList.tsx  TranslationView.tsx  UploadZone.tsx
frontend/src/hooks/: use-font-size.ts  use-sidebar-width.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Dashboard.tsx  History.tsx  LoginPage.tsx  TranslationDetail.tsx  (+2 more)
(+9 files in other folders)
